# scrapy-cloud-browser

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
scrapy_cloud_browser/: __init__.py  download_handler.py  extension.py  schemas.py  settings.py
scrapy_cloud_browser/scenarist/: __init__.py  browser.py  connection.py  errors.py  page.py
tests/: test_basic.py
